@@ -2,6 +2,13 @@
 # Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_cmdline.sh,
+  gen_compile.sh, gen_initramfs.sh, gen_initrd.sh, gen_package.sh,
+  genkernel:
+  Added a patch from Joshua Kinard <kumba@gentoo.org> to clean up the Pegasos
+  hacks in genkernel. This is from bug #193826. This is genkernel 3.4.9_pre7
+  for testing.
+
   07 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_arch.sh:
   Added a simple patch from Andrew Gaffney <agaffney@gentoo.org> to ensure
   that we export ARCH before running menuconfig. This is from bug #190327.
@@ -13,8 +20,8 @@
   Thanks to Robin H. Johnson <robbat2@gentoo.org> for suggesting the changes
   and testing.
 
-  02 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> ++, gen_initramfs.sh,
-  gen_initrd.sh, genkernel:
+  02 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> +generic/modprobe,
+  gen_initramfs.sh, gen_initrd.sh, genkernel:
   Reverting the removal of generic/modprobe for bug #197730. This is genkernel
   3.4.9_pre6 for testing.
 
